CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

FIND_PACKAGE(SlicerExecutionModel REQUIRED)
INCLUDE(${SlicerExecutionModel_USE_FILE})

FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

SEMMacroBuildCLI(
NAME ProstateExample
ADDITIONAL_SRCS vtkOBJWriter.cxx
TARGET_LIBRARIES ${ITK_LIBRARIES} ${VTK_LIBRARIES}
)
